--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,8 @@ html, body {
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	color: #444;
 	-webkit-font-smoothing: antialiased;
-	background: url(../img/onon-teaser.jpg) no-repeat center top;
-	/*background: black;*/
+	background: black;
+	/*background: url(../img/zinchro-teaser.jpg) no-repeat center top;*/
 	/*background: -moz-linear-gradient(top,  #000222 0%, #4b637c 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000222), color-stop(100%,#4b637c));
 	background: -webkit-linear-gradient(top,  #000222 0%,#4b637c 100%);
@@ -36,30 +36,25 @@ html, body {
 	background: -ms-linear-gradient(top,  #000222 0%,#4b637c 100%);
 	background: linear-gradient(top,  #000222 0%,#4b637c 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000222', endColorstr='#4b637c',GradientType=0 );	*/
+
 }
 
 #container {
 	position: fixed;
-	width: 500px;
-	height: 300px;
-	top: 50%;
-	left: 50%;
-	margin-top: -150px;
-	margin-left: -250px;
 	text-align: center;
 	-webkit-animation-name: fadeIn;
 	-webkit-animation-fill-mode: both;
-	-webkit-animation-duration: 5s;
+	-webkit-animation-duration: 3s;
 	-webkit-animation-iteration-count: 1;
 	-webkit-animation-timing-function: linear;
 	-moz-animation-name: fadeIn;
 	-moz-animation-fill-mode: both;
-	-moz-animation-duration: 5s;
+	-moz-animation-duration: 3s;
 	-moz-animation-iteration-count: 1;
 	-moz-animation-timing-function: linear;
 	animation-name: fadeIn;
 	animation-fill-mode: both;
-	animation-duration: 5s;
+	animation-duration: 3s;
 	animation-iteration-count: 1;
 	animation-timing-function: linear;
 }
@@ -202,14 +197,18 @@ input[type=submit]:active {
 	
 }
 
+.img-responsive {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
 
 /* Media Queries */
 
 @media screen and (max-width: 480px) {
 
 	#container {
-		width: 460px;
-		margin-left: -230px;
+		/*width: 460px;*/
 	}
 	
 	
@@ -218,8 +217,7 @@ input[type=submit]:active {
 @media screen and (max-width: 320px) {
 
 	#container {
-		width: 300px;
-		margin-left: -150px;
+		/*width: 300px;*/
 }
 	
 	input {
