--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ html, body {
 	color: #444;
 	-webkit-font-smoothing: antialiased;
 	background: black;
-	/*background: url(../img/zinchro-teaser.jpg) no-repeat center top;*/
+	/*background: url(../images/onon-teaser.jpg) no-repeat center top;*/
 	/*background: -moz-linear-gradient(top,  #000222 0%, #4b637c 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000222), color-stop(100%,#4b637c));
 	background: -webkit-linear-gradient(top,  #000222 0%,#4b637c 100%);
@@ -39,22 +39,28 @@ html, body {
 
 }
 
+body {
+	background: url(../images/zinchro-teaser-2.jpg) no-repeat center top;
+	background-size: 100%
+}
+
+
 #container {
 	position: fixed;
 	text-align: center;
 	-webkit-animation-name: fadeIn;
 	-webkit-animation-fill-mode: both;
-	-webkit-animation-duration: 3s;
+	-webkit-animation-duration: 8s;
 	-webkit-animation-iteration-count: 1;
 	-webkit-animation-timing-function: linear;
 	-moz-animation-name: fadeIn;
 	-moz-animation-fill-mode: both;
-	-moz-animation-duration: 3s;
+	-moz-animation-duration: 8s;
 	-moz-animation-iteration-count: 1;
 	-moz-animation-timing-function: linear;
 	animation-name: fadeIn;
 	animation-fill-mode: both;
-	animation-duration: 3s;
+	animation-duration: 8s;
 	animation-iteration-count: 1;
 	animation-timing-function: linear;
 }
@@ -80,18 +86,18 @@ p {
 	font-weight: 300;
 }
 
-p a {
+a {
 	color: #fff;
-	border-bottom: 2px solid #2da1ec;
+	text-decoration:none;
 	-webkit-transition: all .4s ease;
 	-moz-transition: all .4s ease;
 	-o-transition: all .4s ease;
 	transition: all .4s ease;
 }
 
-p a:hover {
-	color: #2da1ec;
-	border-bottom: 2px solid #fff;
+a:hover {
+	color: gray;
+	text-decoration:none;
 } 
 
 #subscribe {
@@ -203,22 +209,27 @@ input[type=submit]:active {
   max-width: 100%;
 }
 
+#footer {
+	position:absolute;
+	bottom:0;
+	width:100%;
+	height:60px;   /* Height of the footer */
+	/*background: black;*/
+	text-align: center;
+}
+
 /* Media Queries */
 
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) {
 
-	#container {
-		/*width: 460px;*/
-	}
-	
-	
+	body { background: url(../images/zinchro-teaser-small.jpg) no-repeat center top;
+			background-size: 100% }
 }
 
-@media screen and (max-width: 320px) {
+@media (max-width: 800px) {
 
-	#container {
-		/*width: 300px;*/
-}
+	body { background: url(../images/zinchro-teaser-medium.jpg) no-repeat center top;
+			background-size: 100% }
 	
 	input {
 		font-size: 20px;
